Completed gui_timestamp branch

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ build/
 
 .DS_Store
 .gradle/
+
+.idea/compiler.xml
+
+.idea/copyright/profiles_settings.xml
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/workspace.xml
